k8s/whispr/devzeyu/ingress/ingressroute-admin.yaml
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: argocd-ui
  namespace: argocd
spec:
  entryPoints:
    - web
  routes:
    - match: PathPrefix(`/argocd`)
      kind: Rule
      priority: 100
      services:
        - name: argocd-server
          namespace: argocd
          port: 80
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: sonarqube-ui
  namespace: sonarqube
spec:
  entryPoints:
    - web
  routes:
    - match: PathPrefix(`/sonarqube`)
      kind: Rule
      priority: 100
      services:
        - name: sonarqube-sonarqube
          namespace: sonarqube
          port: 9000
