k8s/whispr/devzeyu/ingress/ingressroute-api.yaml
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: whispr-api
  namespace: whispr-preprod
spec:
  entryPoints:
    - web
  routes:
    - match: PathPrefix(`/auth`)
      kind: Rule
      priority: 100
      services:
        - name: auth-service
          namespace: whispr-preprod
          port: 3010
      middlewares:
        - name: whispr-cors
          namespace: whispr-preprod
    - match: PathPrefix(`/user`)
      kind: Rule
      priority: 100
      services:
        - name: user-service
          namespace: whispr-preprod
          port: 3011
      middlewares:
        - name: whispr-cors
          namespace: whispr-preprod
    - match: PathPrefix(`/media`)
      kind: Rule
      priority: 100
      services:
        - name: media-service
          namespace: whispr-preprod
          port: 3012
      middlewares:
        - name: whispr-cors
          namespace: whispr-preprod
    - match: PathPrefix(`/messaging`)
      kind: Rule
      priority: 100
      services:
        - name: messaging-service
          namespace: whispr-preprod
          port: 4010
      middlewares:
        - name: whispr-cors
          namespace: whispr-preprod
    - match: PathPrefix(`/notification`)
      kind: Rule
      priority: 100
      services:
        - name: notification-service
          namespace: whispr-preprod
          port: 4011
      middlewares:
        - name: whispr-cors
          namespace: whispr-preprod
    - match: PathPrefix(`/scheduling`)
      kind: Rule
      priority: 100
      services:
        - name: scheduling-service
          namespace: whispr-preprod
          port: 3013
      middlewares:
        - name: whispr-cors
          namespace: whispr-preprod
